2005-05-06  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap.cpp/.h
	  - many test, hacks and fixes to make coastline generation code
	    work again. Only one bug remains, many old bugs are fixed now.
	    coastlines could be reenabled for 3d rendering again now.

2005-04-24  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* system.h/cpp
	  - now supports printf style parameters for myassert and
	    add_console
	* coastmap.h/cpp
	  - improved coastline generation

2005-04-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* each sea_object has a reference to game, removing tons of
	  "game& gm" parameters of function calls.
	
2005-04-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* fixed bump mapping
	* now ambient is read and used, so we have dynamic ambient light

2005-04-10  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* introduced 4d vector and operations
	* changed texture class interface
	* new model file format with reading and writing
	* now can read LUMINANCE textures
	* many fixes around texture mapping and bump mapping (some bugs
	  remain)

2005-04-10 Andy Rice
	* Support for stereo/directional sound
	* Sub engine noise sound effects
	
2005-04-03  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* added popup handling
	* added control and TDC popup
	* introduced new image cache

2005-03-27  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* fixed big memory leak caused by missing destructor of user_display
	* removed obsolete data
	* made memory usage / pointer handling more stable by using auto_ptr
	* hacked wild experiments with water bump mapping and shaders
	  (currently disabled).
	* more integration of TDC graphics.

2005-03-14 Andy Rice
	* aegeanconvoy.xml, battleships.xml
	 - submarine starts at periscope depth (to avoid radar detection straight away)	 
	* battleship_malaya.xml, corvette.xml, destroyer_oclass.xml, destoryer_tribal.xml,
	  submarine_IXc40.xml, submarine_VIIc.xml, submarine_XXI.xml
	 - added radar