@@ -46,6 +46,7 @@ class vector2t
 	vector2t<D> matrixmul(const vector2t<D>& c0, const vector2t<D>& c1) const;
 	vector2t<D> coeff_mul(const vector2t<D>& other) const { return vector2t(x * other.x, y * other.y); }
 	vector3t<D> xy0(void) const { return vector3t<D>(x, y, 0); }
+	vector3t<D> xyz(const D& z) const { return vector3t<D>(x, y, z); }
 	template<class D2> friend std::ostream& operator<< ( std::ostream& os, const vector2t<D2>& v );
 	template<class E> void assign(const vector2t<E>& other) { x = D(other.x); y = D(other.y); }
 };
